[package]
name = "git-scrubber"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.13", default-features = false }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
indicatif = "0.16"
once_cell = "1.9"
blake3 = "1.2"
hex = "0.4"
chrono = "0.4"
